--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,11 +39,21 @@
                             class="material-icons mr-1">playlist_play</span> Selecione a versão</label>
                     <select id="version"
                         class="w-full block bg-transparent border-b-2 border-white focus:border-blue-400 duration-300 outline-none text-zinc-300">
-                        <% for(let version of versions) { %>
-                            <option class="text-black" value="<%= version.id %>">
-                                relase <%= version.id %> vanilla
+                        <% for(let version of vanilla) { %>
+                            <option class="text-black" value="<%= version.id %> vanilla">
+                                <%= version.id %> vanilla
                             </option>
-                            <% } %>
+                        <% } %>
+                        <% for(let version of fabric) { %>
+                            <option class="text-black" value="<%= version.version %> fabric">
+                                <%= version.version %> fabric
+                            </option>
+                        <% } %>
+                        <% for(let version of forge) { %>
+                            <option class="text-black" value="<%= version%> forge">
+                                <%= version %> forge
+                            </option>
+                        <% } %>
                     </select>
                 </div>
                 <div class="mt-3">
@@ -56,8 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="absolute bottom-0 left-0 h-7 bg-green-400 text-ellipsis overflow-hidden" id="barra">
-        </div>
+        <div class="absolute bottom-0 left-0 duration-500 bg-green-400 overflow-clip text-ellipsis text-zinc-700" id="barra"></div>
     </main>
     <script>var exports = {};</script>
     <script src="../services/launcher.js"></script>
