--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,13 +10,17 @@
 </head>
 
 <body style="background: url(../assets/wallpaper.jpg) no-repeat; background-size: cover;">
+    <%- include('loading.ejs')  %>
     <header>
-        <div style="-webkit-user-select: none; user-select: none; -webkit-app-region: drag;" class="text-white flex justify-end fixed w-full">
+        <div style="-webkit-user-select: none; user-select: none; -webkit-app-region: drag;"
+            class="text-white flex justify-end fixed w-full z-50">
             <div>
-                <span style="-webkit-app-region: no-drag;" class="material-icons cursor-pointer hover:bg-slate-500 p-1" id="minimize">close_fullscreen</span>
+                <span style="-webkit-app-region: no-drag;" class="material-icons cursor-pointer hover:bg-slate-500 p-1"
+                    id="minimize">close_fullscreen</span>
             </div>
             <div>
-                <span style="-webkit-app-region: no-drag;" class="material-icons cursor-pointer hover:bg-red-600 p-1" onclick="window.close()">close</span>
+                <span style="-webkit-app-region: no-drag;" class="material-icons cursor-pointer hover:bg-red-600 p-1"
+                    onclick="window.close()">close</span>
             </div>
         </div>
     </header>
@@ -31,48 +35,27 @@
                             class="material-icons mr-1">person</span> Seu username</label>
                     <input
                         class="block w-full outline-none text-zinc-300 bg-transparent border-b-2 border-white focus:border-blue-400 duration-300"
-                        type="text" placeholder="Player" id="name" <% if (cache.lastUsername.length > 0) { %>
-                            value="<%= cache.lastUsername %>" 
-                        <% } %>>
+                        type="text" placeholder="Player" id="name">
                 </div>
                 <div class="mt-6">
                     <label class="text-zinc-200 flex items-center mb-1" for="version"><span
                             class="material-icons mr-1">playlist_play</span> Selecione a versão</label>
-                    <select id="version"
-                        class="w-full block bg-transparent border-b-2 border-white focus:border-blue-400 duration-300 outline-none text-zinc-300">
-                        <% for(let version of vanilla) { %>
-                            <option class="text-black" <% if (cache.lastVersion.length > 0 && `${version} vanilla` == cache.lastVersion ) { %>
-                                selected 
-                            <% } %> value="<%= version.id %> vanilla">
-                                <%= version.id %> vanilla
-                            </option>
-                        <% } %>
-                        <% for(let version of fabric) { %>
-                            <option class="text-black" <% if (cache.lastVersion.length > 0 && `${version} fabric` == cache.lastVersion ) { %>
-                                selected 
-                            <% } %> value="<%= version.version %> fabric">
-                                <%= version.version %> fabric
-                            </option>
-                        <% } %>
-                        <% for(let version of forge) { %>
-                            <option class="text-black" <% if (cache.lastVersion.length > 0 && `${version} forge` == cache.lastVersion ) { %>
-                                selected 
-                            <% } %> value="<%= version %> forge">
-                                <%= version %> forge
-                            </option>
-                        <% } %>
+                    <select id="version" class="w-full block bg-transparent border-b-2 border-white focus:border-blue-400 duration-300 outline-none text-zinc-300">
+
                     </select>
                 </div>
                 <div class="mt-3">
-                    <button id="play" class="text-center flex p-1 text-zinc-300 bg-zinc-400 w-full items-center justify-center"><span
-                        class="material-icons mr-1">play_circle</span> Jogar</button>
+                    <button id="play"
+                        class="text-center flex p-1 text-zinc-300 bg-zinc-400 w-full items-center justify-center"><span
+                            class="material-icons mr-1">play_circle</span> Jogar</button>
                 </div>
             </div>
         </div>
-        <div class="absolute bottom-0 left-0 duration-500 bg-green-400 overflow-clip text-ellipsis text-zinc-700" id="barra"></div>
+        <div class="absolute bottom-0 left-0 duration-500 bg-green-400 overflow-clip text-ellipsis text-zinc-700"
+            id="barra"></div>
     </main>
     <script>var exports = {};</script>
     <script src="../services/launcher.js"></script>
+    <span class="text-black"></span>
 </body>
-
 </html>
