opção de escolher a pasta através explorador de arquivos Opção de deixar em tela cheia corrigida Tela de "sobre"

--- a/src/core/css/style.css
+++ b/src/core/css/style.css
@@ -645,6 +645,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -942,6 +946,11 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .text-lime-700 {
