--- a/src/pages/partials/config.html
+++ b/src/pages/partials/config.html
@@ -6,7 +6,7 @@
             <div class="flex">
                 <input class="w-full outline-none bg-zinc-900 p-1 border-l-4 border-blue-500 rounded-l focus:border-b-2"
                     type="text" placeholder="Caminho para a pasta do minecraft" id="dir"><button
-                    class="bg-blue-500 px-1 rounded-r">Procurar</button>
+                    class="bg-blue-500 px-1 rounded-r" id="fileExplorer">Procurar</button>
             </div>
         </div>
         <div class="flex flex-col">
