--- a/src/pages/partials/accounts.html
+++ b/src/pages/partials/accounts.html
@@ -1,4 +1,4 @@
-<div class="p-3">
+<div class="p-3 overflow-y-scroll h-full">
     <p class="text-4xl">Contas</p>
     <div class="flex flex-col gap-4" id="acc-list">
     </div>
