--- a/src/pages/partials/config.html
+++ b/src/pages/partials/config.html
@@ -1,4 +1,4 @@
-<div class="p-3">
+<div class="p-3 overflow-y-scroll h-full">
     <p class="text-4xl">Configurações</p>
     <div class="flex flex-col gap-y-4">
         <div class="flex flex-col">
