--- a/src/pages/partials/home.html
+++ b/src/pages/partials/home.html
@@ -1,4 +1,4 @@
-<div class="p-3">
+<div class="p-3 overflow-y-scroll h-full">
     <label for="version">Selecione a versão</label>
     <div class="group">
         <input placeholder="Selecione a versão" class="w-0 bg-zinc-500 outline-none text-white placeholder:ml-1 opacity-0" id="version" value="vanilla 1.20.1">
